APIs updated GPS.