@@ -1,7 +1,13 @@
 package com.feros.api.gps.handler.tcp;
 
+import com.feros.api.entity.GpsDevice;
 import com.feros.api.enums.GpsConnectionType;
+import com.feros.api.gps.GpsLiveStore;
+import com.feros.api.gps.GpsOdometerService;
+import com.feros.api.gps.GpsPingPersistenceService;
+import com.feros.api.gps.GpsRouteService;
 import com.feros.api.gps.handler.GpsConnectionHandler;
+import com.feros.api.gps.parser.GpsPacketParser;
 import com.feros.api.gps.parser.GpsParserRegistry;
 import com.feros.api.repository.GpsDeviceRepository;
 import jakarta.annotation.PostConstruct;
@@ -10,9 +16,12 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
-import java.io.IOException;
+import java.io.*;
 import java.net.ServerSocket;
 import java.net.Socket;
+import java.net.SocketTimeoutException;
+import java.nio.charset.StandardCharsets;
+import java.time.Instant;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
@@ -20,30 +29,33 @@ import java.util.concurrent.Executors;
 @Slf4j
 public class GpsTcpServer implements GpsConnectionHandler {
 
-    @Value("${gps.server.host}")
-    private String serverHost;
+    @Value("${gps.server.host}")      private String  serverHost;
+    @Value("${gps.tcp.enabled:true}") private boolean enabled;
+    @Value("${gps.tcp.port:2024}")    private int     port;
+    @Value("${gps.tcp.read-timeout-seconds:300}") private int readTimeoutSeconds;
 
-    @Value("${gps.tcp.enabled:true}")
-    private boolean enabled;
+    private final GpsParserRegistry        parserRegistry;
+    private final GpsDeviceRepository      deviceRepo;
+    private final GpsPingPersistenceService persistenceService;
+    private final GpsOdometerService       odometerService;
+    private final GpsRouteService          routeService;
+    private final GpsLiveStore             liveStore;
 
-    @Value("${gps.tcp.port:2024}")
-    private int port;
-
-    @Value("${gps.tcp.thread-pool-size:50}")
-    private int threadPoolSize;
-
-    @Value("${gps.tcp.read-timeout-seconds:300}")
-    private int readTimeoutSeconds;
-
-    private final GpsParserRegistry parserRegistry;
-    private final GpsDeviceRepository deviceRepo;
-
-    private ServerSocket serverSocket;
+    private ServerSocket  serverSocket;
     private ExecutorService threadPool;
 
-    public GpsTcpServer(GpsParserRegistry parserRegistry, GpsDeviceRepository deviceRepo) {
-        this.parserRegistry = parserRegistry;
-        this.deviceRepo = deviceRepo;
+    public GpsTcpServer(GpsParserRegistry parserRegistry,
+                        GpsDeviceRepository deviceRepo,
+                        GpsPingPersistenceService persistenceService,
+                        GpsOdometerService odometerService,
+                        GpsRouteService routeService,
+                        GpsLiveStore liveStore) {
+        this.parserRegistry    = parserRegistry;
+        this.deviceRepo        = deviceRepo;
+        this.persistenceService = persistenceService;
+        this.odometerService   = odometerService;
+        this.routeService      = routeService;
+        this.liveStore         = liveStore;
     }
 
     @Override
@@ -55,14 +67,16 @@ public class GpsTcpServer implements GpsConnectionHandler {
     @Override
     public void start() {
         if (!enabled) {
-            log.info("GPS TCP server is disabled (gps.tcp.enabled=false)");
+            log.info("GPS TCP server disabled (gps.tcp.enabled=false)");
             return;
         }
-        threadPool = Executors.newFixedThreadPool(threadPoolSize);
+        // ponytail: virtual threads (Java 21) — unmount while blocked on I/O, handles
+        // hundreds of persistent GPS connections with negligible memory overhead
+        threadPool = Executors.newVirtualThreadPerTaskExecutor();
         Thread acceptThread = new Thread(this::acceptLoop, "gps-tcp-accept");
         acceptThread.setDaemon(true);
         acceptThread.start();
-        log.info("GPS TCP server started — {}:{}", serverHost, port);
+        log.info("GPS TCP server started on {}:{}", serverHost, port);
     }
 
     @PreDestroy
@@ -85,7 +99,7 @@ public class GpsTcpServer implements GpsConnectionHandler {
             }
         } catch (IOException e) {
             if (serverSocket != null && !serverSocket.isClosed()) {
-                log.error("GPS TCP server accept loop error", e);
+                log.error("GPS TCP accept loop error", e);
             }
         }
     }
@@ -93,17 +107,79 @@ public class GpsTcpServer implements GpsConnectionHandler {
     private void handleConnection(Socket socket) {
         String remote = socket.getRemoteSocketAddress().toString();
         log.info("GPS TCP connection from {}", remote);
-        try (socket) {
-            // TODO: implement in Phase 3 Stage 1 once real packet format is confirmed
-            // 1. Read login packet → extract IMEI → look up GpsDevice by deviceIdentifier
-            // 2. Resolve parserKey from device.model → look up parser in GpsParserRegistry
-            // 3. Build TcpSessionContext
-            // 4. Read loop: BufferedReader.readLine() → one frame per line
-            //    - Skip empty lines
-            //    - Route frame to parser.parse(device, rawFrame)
-            //    - On successful parse: persist GpsPing, update device.lastPingAt
+        try (socket;
+             BufferedReader reader = new BufferedReader(
+                     new InputStreamReader(socket.getInputStream(), StandardCharsets.US_ASCII));
+             PrintWriter writer = new PrintWriter(
+                     new OutputStreamWriter(socket.getOutputStream(), StandardCharsets.US_ASCII), true)) {
+
+            // First line must be a login packet
+            String loginLine = reader.readLine();
+            if (loginLine == null || !loginLine.startsWith("$LGN")) {
+                log.warn("GPS TCP: first packet not $LGN from {} — got: {}", remote, loginLine);
+                return;
+            }
+
+            String imei = extractImei(loginLine);
+            if (imei == null) {
+                log.warn("GPS TCP: cannot extract IMEI from login: {}", loginLine);
+                return;
+            }
+
+            GpsDevice device = deviceRepo.findByDeviceIdentifier(imei).orElse(null);
+            if (device == null) {
+                log.warn("GPS TCP: unknown IMEI {} from {}", imei, remote);
+                return;
+            }
+
+            GpsPacketParser parser = parserRegistry.getParser(device.getModel().getParserKey()).orElse(null);
+            if (parser == null) {
+                log.error("GPS TCP: no parser for key {} — IMEI {}", device.getModel().getParserKey(), imei);
+                return;
+            }
+
+            // ACK the login so device starts sending tracking packets
+            writer.println("ACK");
+
+            TcpSessionContext ctx = TcpSessionContext.builder()
+                    .device(device)
+                    .parser(parser)
+                    .remoteAddress(remote)
+                    .connectedAt(Instant.now())
+                    .build();
+
+            log.info("GPS session started — {} IMEI {}", device.getVehicle().getRegistrationNumber(), imei);
+
+            String line;
+            while ((line = reader.readLine()) != null) {
+                if (line.isBlank()) continue;
+                final String frame = line;
+                parser.parse(ctx.getDevice(), frame).ifPresent(ping -> {
+                    odometerService.accumulate(ping);  // uses liveStore.getLatest BEFORE update
+                    routeService.maybeRecord(ping);     // uses liveStore.getLastRoutePoint BEFORE update
+                    liveStore.update(ping);             // update last known position
+                    persistenceService.save(ping);      // persist to gps_pings
+                });
+            }
+
+            log.info("GPS session ended — IMEI {}", imei);
+
+        } catch (SocketTimeoutException e) {
+            log.info("GPS TCP session timeout — {}", remote);
         } catch (Exception e) {
             log.warn("GPS TCP session error from {}: {}", remote, e.getMessage());
+        }
+    }
+
+    // $LGN,vehicleReg,IMEI,firmware,...*checksum  →  field[2] = IMEI
+    private String extractImei(String loginLine) {
+        try {
+            int star = loginLine.lastIndexOf('*');
+            String stripped = star > 0 ? loginLine.substring(0, star) : loginLine;
+            String[] fields = stripped.split(",");
+            return fields.length >= 3 ? fields[2].trim() : null;
+        } catch (Exception e) {
+            return null;
         }
     }
 }
